# lidar_camera_fusion_calibrator

./: CMakeLists.txt  README.md  build.sh  fusion.cpp  fusion.h  fusion.ui  imgpointshow.cpp  imgpointshow.h  imgpointshow.ui  main.cpp
config/: initparam.yaml
debfiles/: CalibratorTool.desktop  control  postinst  postrm
testdata/: 1.yaml  2.yaml  initparam.yaml  test.yaml
testdata/test_cal/: 0001.pcd  0002.pcd  0003.pcd  0004.pcd  0005.pcd  0006.pcd
